Small CSS fix for .collapsable and .user-icon

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -189,7 +189,8 @@ html, body, .container {
     .icon;
     opacity: 0.5;
     cursor: pointer;
-    padding: 6px;
+    padding: 4px;
+    text-align: center;
 }
 
 .network-channels {
@@ -212,6 +213,7 @@ html, body, .container {
     padding: 5px;
     font-size: 12px;
     line-height: 1.5;
+    text-align: center;
 }
 
 .channel.selected {
